[package]
name = "rwrs-server"
version = "0.3.0"
edition = "2024"

[dependencies]
salvo = { version = "0.85.0", features = ["request-id", "logging", "serve-static", "affix-state"] }
tokio = { version = "1.48.0", features = ["macros", "sync", "time"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
